// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionList Actions CSV export should work 1`] = `
Object {
  "body": Array [
    Array [
      "83e34390-c4cc-46b4-a26e-d6c84324af73",
      -100,
      "credit",
      "DemoVendor2",
      "Johans' desk meter",
      "DemoOperator",
      "6e60d5b6-9ccd-4a4f-b041-d318dc04c0e6",
      "2016-02-22T14:17:33.208570",
      "test_grid_1",
      "cash",
      "reversed",
      "reversal",
      null,
      null,
      null,
      "SM15R-01-00000002",
      "DemoVendor2",
    ],
    Array [
      "3c1a7b18-5c17-4afb-9559-62b55f44c213",
      100,
      "credit",
      "DemoVendor2",
      "Johans' desk meter",
      "DemoOperator",
      null,
      "2016-02-22T14:01:06.531095",
      "test_grid_1",
      "cash",
      "processed",
      "user",
      "an-external-id",
      "a memo",
      null,
      "SM15R-01-00000002",
      "DemoVendor2",
    ],
    Array [
      "84192504-d4b3-4b98-8480-c4e9128b1e41",
      -100,
      "credit",
      "DemoVendor2",
      "Johans' desk meter",
      "DemoOperator",
      "a73e986f-52e8-4d9a-9fb1-17a95ad53153",
      "2016-02-22T13:04:11.993897",
      "test_grid_1",
      "cash",
      "error",
      "reversal",
      null,
      null,
      "The parent transaction has already been reversed.",
      "SM15R-01-00000002",
      "DemoVendor2",
    ],
    Array [
      "100dd50c-3e9b-440f-87e1-c2908c4d2616",
      100,
      "credit",
      "DemoVendor2",
      "Johans' desk meter",
      "DemoOperator",
      null,
      "2016-02-19T15:48:08.788432",
      "test_grid_1",
      "cash",
      "pending",
      "system",
      null,
      null,
      null,
      "SM15R-01-00000002",
      "DemoVendor2",
    ],
    Array [
      "100dd50c-3e9b-440f-87e1-c2908c4d2617",
      100,
      "credit",
      "DemoVendor2",
      "Johans' desk meter",
      "DemoOperator",
      null,
      "2016-02-19T15:48:08.788432",
      "test_grid_1",
      "cash",
      "processed",
      "user",
      null,
      null,
      null,
      "SM15R-01-00000002",
      "DemoVendor2",
    ],
    Array [
      "100dd50c-3e9b-440f-87e1-c2908c4d2618",
      100,
      "credit",
      "DemoVendor2",
      "Johans' desk meter",
      "DemoOperator",
      null,
      "2016-02-19T15:48:08.788433",
      "test_grid_1",
      "cash",
      "processed",
      "reversal",
      null,
      null,
      null,
      "SM15R-01-00000002",
      "DemoVendor2",
    ],
  ],
  "footer": null,
  "header": Array [
    "ID",
    "Amount",
    "Type",
    "From",
    "To",
    "User",
    "Reference",
    "Created",
    "Ground",
    "Source",
    "State",
    "Origin",
    "External",
    "Memo",
    "Error",
    "Meter Serial",
    "Sales Account",
  ],
}
`;

exports[`TransactionList Actions Rendering table should work 1`] = `
Object {
  "body": Array [
    Array [
      "83e34390-c4cc-46b4-a26e-d6c84324af73",
      -100,
      "credit",
      "<a href=\\"/sales-account/123/\\">DemoVendor2</i></a>",
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "<a href=\\"/user/DemoOperator/\\">DemoOperator</a>",
      "6e60d5b6-9ccd-4a4f-b041-d318dc04c0e6",
      "2016-02-22T14:17:33.208570",
      "test_grid_1",
      "<button class=\\"btn btn-info\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"83e34390-c4cc-46b4-a26e-d6c84324af73\\">View</button>",
    ],
    Array [
      "3c1a7b18-5c17-4afb-9559-62b55f44c213",
      100,
      "credit",
      "<a href=\\"/sales-account/123/\\">DemoVendor2</i></a>",
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "<a href=\\"/user/DemoOperator/\\">DemoOperator</a>",
      null,
      "2016-02-22T14:01:06.531095",
      "test_grid_1",
      "<button class=\\"btn btn-info\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"3c1a7b18-5c17-4afb-9559-62b55f44c213\\">View</button>",
    ],
    Array [
      "84192504-d4b3-4b98-8480-c4e9128b1e41",
      -100,
      "credit",
      "<a href=\\"/sales-account/123/\\">DemoVendor2</i></a>",
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "<a href=\\"/user/DemoOperator/\\">DemoOperator</a>",
      "a73e986f-52e8-4d9a-9fb1-17a95ad53153",
      "2016-02-22T13:04:11.993897",
      "test_grid_1",
      "<button class=\\"btn btn-info\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"84192504-d4b3-4b98-8480-c4e9128b1e41\\">View</button>",
    ],
    Array [
      "100dd50c-3e9b-440f-87e1-c2908c4d2616",
      100,
      "credit",
      "<a href=\\"/sales-account/123/\\">DemoVendor2</i></a>",
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "<a href=\\"/user/DemoOperator/\\">DemoOperator</a>",
      null,
      "2016-02-19T15:48:08.788432",
      "test_grid_1",
      "<button class=\\"btn btn-info\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"100dd50c-3e9b-440f-87e1-c2908c4d2616\\">View</button>",
    ],
    Array [
      "100dd50c-3e9b-440f-87e1-c2908c4d2617<a href=\\"#\\" class=\\"pull-right\\"    data-toggle=\\"modal\\"   data-target=\\"#reverse-modal\\"   data-transaction-id=\\"100dd50c-3e9b-440f-87e1-c2908c4d2617\\">  <i class=\\"icon-remove-circle\\"></i></a>",
      100,
      "credit",
      "<a href=\\"/sales-account/123/\\">DemoVendor2</i></a>",
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "<a href=\\"/user/DemoOperator/\\">DemoOperator</a>",
      null,
      "2016-02-19T15:48:08.788432",
      "test_grid_1",
      "<button class=\\"btn btn-info\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"100dd50c-3e9b-440f-87e1-c2908c4d2617\\">View</button>",
    ],
    Array [
      "100dd50c-3e9b-440f-87e1-c2908c4d2618",
      100,
      "credit",
      "<a href=\\"/sales-account/123/\\">DemoVendor2</i></a>",
      "<a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</i></a>",
      "<a href=\\"/user/DemoOperator/\\">DemoOperator</a>",
      null,
      "2016-02-19T15:48:08.788433",
      "test_grid_1",
      "<button class=\\"btn btn-info\\" data-action=\\"view\\" data-toggle=\\"collapse\\"data-target=\\"100dd50c-3e9b-440f-87e1-c2908c4d2618\\">View</button>",
    ],
  ],
  "footer": null,
  "header": Array [
    "ID",
    "Amount",
    "Type",
    "From",
    "To",
    "User",
    "Reference",
    "Created",
    "Ground",
    "Details",
  ],
}
`;

exports[`TransactionList Actions reverse modal should work 1`] = `"<a id=\\"reverse-link\\" href=\\"/transaction/100dd50c-3e9b-440f-87e1-c2908c4d2617/reverse\\"><p id=\\"reverse-help\\">A new transaction of -100 from <a href=\\"/sales-account/123/\\">DemoVendor2</a> to <a href=\\"/meter/SM15R-01-00000002/\\">SM15R-01-00000002</a> will be created.</p></a>"`;

exports[`TransactionList Actions show details should work 1`] = `"<span class=\\"label label-info\\" data-type=\\"source\\">Source: cash</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"origin\\">Origin: Reversal</span>&nbsp;<span class=\\"label label-success\\" data-type=\\"state\\">Reversed</span>&nbsp;<span class=\\"label label-info\\">Customer name: Johans' desk meter</span>&nbsp;"`;

exports[`TransactionList Actions show details should work 2`] = `"<span class=\\"label label-info\\" data-type=\\"source\\">Source: cash</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"origin\\">Origin: User</span>&nbsp;<span class=\\"label label-success\\" data-type=\\"state\\">Processed</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"external-id\\">External ID: an-external-id</span>&nbsp;<span class=\\"label label-info\\">Customer name: Johans' desk meter</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"memo\\">Memo: a memo</span>&nbsp;"`;

exports[`TransactionList Actions show details should work 3`] = `"<span class=\\"label label-info\\" data-type=\\"source\\">Source: cash</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"origin\\">Origin: Reversal</span>&nbsp;<span class=\\"label label-danger\\" data-type=\\"state\\">Error: The parent transaction has already been reversed.</span>&nbsp;<span class=\\"label label-info\\">Customer name: Johans' desk meter</span>&nbsp;"`;

exports[`TransactionList Actions show details should work 4`] = `"<span class=\\"label label-info\\" data-type=\\"source\\">Source: cash</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"origin\\">Origin: System</span>&nbsp;<span class=\\"label label-default\\" data-type=\\"state\\">Pending</span>&nbsp;<span class=\\"label label-info\\">Customer name: Johans' desk meter</span>&nbsp;"`;

exports[`TransactionList Actions show details should work 5`] = `"<span class=\\"label label-info\\" data-type=\\"source\\">Source: cash</span>&nbsp;<span class=\\"label label-info\\" data-type=\\"origin\\">Origin: User</span>&nbsp;<span class=\\"label label-success\\" data-type=\\"state\\">Processed</span>&nbsp;<span class=\\"label label-info\\">Customer name: Johans' desk meter</span>&nbsp;"`;

exports[`TransactionList Rendering show table title 1`] = `"Transaction History on test-ground"`;
